--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "babel-node ./bin/www --presets es2015"
+    "start": "nodemon src/index.js --exec babel-node",
+    "serve": "node dist/index.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -12,10 +13,19 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.19.2",
+    "mongoose": "^4.13.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "lodash": "^4.17.4",
+    "nodemon": "^1.12.1"
   }
 }
